--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -58,7 +58,7 @@ abbrlink:
 # tag-plugins-plus
 # see https://akilar.top/posts/615e2dec/
 tag_plugins:
-  enable: false # 开关
+  enable: true # 开关
   priority: 5 #过滤器优先权
   issues: false #issues标签依赖注入开关
   link:
