--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-kramed": "^0.1.2",
     "hexo-renderer-markdown-it": "^7.1.1",
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-sass": "^0.5.0",
@@ -44,7 +44,9 @@
     "markdown-it-expandable": "^1.0.2",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-mark": "^4.0.0",
+    "moderate": "^1.1.1",
     "rgbaster": "^2.1.1",
+    "striptags": "^3.2.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
