--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 苏晓河DawnRiver
 subtitle: '博客'
-description: ''
+description: '美化设计师'
 keywords:
 author: 『苏晓河DawnRiver』
 language: zh-CN
