--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: 苏晓河DawnRiver
 subtitle: '博客'
-description: '美化设计师'
-keywords: 探索设计前沿，深度解析从 UI 设计的视觉美学，到交互设计的用户体验塑造，涵盖开发全流程。这份文档为您全方位呈现设计驱动开发的奥秘，助您掌握打造卓越产品的关键，解锁创新设计与高效开发的融合密码。
+description: '探索设计前沿，深度解析从 UI 设计的视觉美学，到交互设计的用户体验塑造，涵盖开发全流程。这份文档为您全方位呈现设计驱动开发的奥秘，助您掌握打造卓越产品的关键，解锁创新设计与高效开发的融合密码。'
+keywords: 美化设计师,优化魔改师
 author: 『苏晓河DawnRiver』
 language: zh-CN
 email: 3227988255@qq.com
