优化添加内容

--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -26,28 +26,11 @@ menu:
 # --------------------------- end ---------------------------
 
 # essay 即刻短文
-# MeuiCat设计
-# https://meuicat.com/blog/67/
-# --------------------------------------
-jike:
-  enable: false
-  # 即刻短文仅展示前n条
-  # Jike short text only shows the first n
-  strip: 50
-  mode: local # local：本地静态 / json：动态json / memos：动态Memos
-  mode_link: #动态模式地址
-  home_mini: true
-  home_mini_link: /essay
-
-## essay 即刻短文
 # --------------------------------------
 essay:
   enable: true
-  home_mini: true
+  modeOptions: heo
 
-# Article Top Banner
-# 文章推荐轮播图
-carousel: true
 # --------------------------- end ---------------------------
 ## abbrlink config
 abbrlink:
