--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -15,7 +15,7 @@ menu:
   关于 || icon-maoliang || faa-tada || hide:
     关于本站: /about/ || icon-paperplane || faa-tada
     我的装备: /equipment/ || icon-paperplane || faa-tada
-    即刻短文: https://travellings.cn/ || fa-fw fa-solid fa-subway || faa-tada
+    开往: https://travellings.cn/ || fa-fw fa-solid fa-subway || faa-tada
 
 # essay 即刻短文
 # MeuiCat设计
