--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -22,6 +22,7 @@ menu:
   关于:
     关于本站: /about/ || icon-paperplane || faa-tada
     我的装备: /equipment/ || icon-paperplane || faa-tada
+    开往: https://travellings.cn/ || fa-fw fa-solid fa-subway || faa-tada
 
 # --------------------------- end ---------------------------
 
