--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -48,6 +48,11 @@ jobs:
         run: |
           npm install yamljs --save
           node link.js
+
+      - name: 生成追番页面文件
+        run: |
+          hexo bangumi -u
+
       - name: 生成静态文件
         run: |
           hexo clean
