--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -1026,9 +1026,9 @@ CDN:
     fontawesomeV6: https://jsd.sxiaohe.top/npm/@fortawesome/fontawesome-free@6.6.0/css/all.min.css
     flickr_justified_gallery_js: https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js
     flickr_justified_gallery_css: https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/justifiedGallery/3.8.1/css/justifiedGallery.min.css
-    aplayer_css: /css/APlayer.min.css
-    aplayer_js: /js/APlayer.min.js
-    meting_js: /js/Meting.min.js
+    aplayer_css: https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/css/APlayer.min.css
+    aplayer_js: https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/js/APlayer.min.js
+    meting_js: https://jsd.sxiaohe.top/gh/661111/hexoSEVER/source/js/Meting.min.js
     prismjs_js: https://jsd.sxiaohe.top/npm/prismjs@1.1.0/prism.js
     prismjs_lineNumber_js: https://jsd.sxiaohe.top/npm/prismjs/plugins/line-numbers/prism-line-numbers.min.js
     prismjs_autoloader: https://jsd.sxiaohe.top/npm/prismjs/plugins/autoloader/prism-autoloader.min.js
