--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,9 +1,18 @@
-- class_name: 0.推荐友链
+- class_name: 零：博主
   flink_style: volantis
   random: true
   link_list:
     - name: 苏晓河
       link: https://www.sxiaohe.top/
-      siteshot: /img/link/苏晓河.avif
+      siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
+- class_name: 壹：朋友们
+  flink_style: volantis
+  random: true
+  link_list:
+    - name: 安小歪
+      link: https://blog.anxy.top/
+      avatar: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b737d854192.webp
+      descr: 记住你！自己！
+      siteshot: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b739bef3f9c.png
