--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -17,3 +17,9 @@
       avatar: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b737d854192.webp
       descr: 记住你！自己！
       siteshot: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b739bef3f9c.png
+    - name: 清羽飞扬
+      link: https://blog.liushen.fun/
+      avatar: https://blog.liushen.fun/info/avatar.ico
+      descr: 柳影曳曳，清酒孤灯，扬笔撒墨，心境如霜
+      siteshot: https://blog.liushen.fun/info/siteshot.jpg
+      atom(options): https://blog.liushen.fun/atom.xml
