--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -23,3 +23,11 @@
       descr: 柳影曳曳，清酒孤灯，扬笔撒墨，心境如霜
       siteshot: https://blog.liushen.fun/info/siteshot.jpg
       atom(options): https://blog.liushen.fun/atom.xml
+- class_name: 贰：2025
+  flink_style: volantis
+  random: true
+  link_list:
+    - name: 轻笑Chuckle
+      link: https://www.qcqx.cn
+      avatar: https://www.qcqx.cn/head.webp
+      descr: 漫天倾尘风中轻笑
