--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -551,23 +551,23 @@ site_verification:
 # Theme color for customize
 # Notice: color value must in double quotes like "#000" or may cause error!
 
-# theme_color:
-#   enable: true
-#   main: "#49B1F5"
-#   paginator: "#00c4b6"
-#   button_hover: "#FF7242"
-#   text_selection: "#00c4b6"
-#   link_color: "#99a9bf"
-#   meta_color: "#858585"
-#   hr_color: "#A4D8FA"
-#   code_foreground: "#F47466"
-#   code_background: "rgba(27, 31, 35, .05)"
-#   toc_color: "#00c4b6"
-#   blockquote_padding_color: "#49b1f5"
-#   blockquote_background_color: "#49b1f5"
-#   scrollbar_color: "#49b1f5"
-#   meta_theme_color_light: "ffffff"
-#   meta_theme_color_dark: "#0d0d0d"
+theme_color:
+  enable: true
+  main: 
+  paginator: 
+  button_hover: 
+  text_selection: 
+  link_color: "#a591e0"
+  meta_color: "#858585"
+  hr_color: "#A4D8FA"
+  code_foreground: 
+  code_background: 
+  toc_color: 
+  blockquote_padding_color: 
+  blockquote_background_color: 
+  scrollbar_color: 
+  meta_theme_color_light: "ffffff"
+  meta_theme_color_dark: "#0d0d0d"  
 
 # The top_img settings of home page
 # default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
@@ -586,6 +586,10 @@ tag_ui: # 留空或 index
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
 background:
+  default: var(--default-bg)
+  darkmode: var(--darkmode-bg)
+  mobileday: var(--mobileday-bg)
+  mobilenight: var(--mobilenight-bg)
 
 # Footer Background
 footer_bg: false
@@ -668,16 +672,16 @@ beautify:
 # Global font settings
 # Don't modify the following settings unless you know how they work (非必要不要修改)
 font:
-  global-font-size:
-  code-font-size:
-  font-family:
-  code-font-family:
+  global-font-size: "15px"
+  code-font-size: "14px"
+  font-family: var(--global-font), -apple-system, 'Quicksand', 'Nimbus Roman No9 L', 'PingFang SC', 'Hiragino Sans GB', 'Noto Serif SC', 'Microsoft Yahei', 'WenQuanYi Micro Hei', 'ST Heiti', sans-serif;
+  code-font-family: Consolas_1, var(--global-font), "Microsoft YaHei", Menlo, "PingFang SC", "Microsoft JhengHei", sans-serif
 
 # Font settings for the site title and site subtitle
 # 左上角網站名字 主頁居中網站名字
 blog_title_font:
   font_link:
-  font-family:
+  font-family: var(--global-font)
 
 # The setting of divider icon (水平分隔線圖標設置)
 hr_icon:
@@ -949,6 +953,13 @@ css_prefix: true
 inject:
   head:
     - <script defer src="/js/jquery.min.js"></script>
+    - <style id="themeColor"></style> # 主题色
+    - <style id="rightSide"></style> # 侧边栏
+    - <style id="transPercent"></style> # 透明度调节
+    - <style id="blurNum"></style> # 模糊半径调节
+    - <style id="settingStyle"></style> # 模糊效果开关
+    - <span id="fps"></span> # 帧率检测
+    - <style id="defineBg"></style> # 自定义背景选项
     #- <link rel="stylesheet" href="/xxx.css">
   bottom:
     # - <script src="xxxx"></script>
@@ -959,6 +970,8 @@ inject:
     - <script async src="/js/essay.js"></script>
     - <script async src="//at.alicdn.com/t/c/font_3612150_gkavascgf3n.js"></script>
     - <script data-pjax defer src="/js/fixed_card_widget.js"></script>
+    - <script defer src="https://jsd.sxiaohe.top/gh/nextapps-de/winbox/dist/winbox.bundle.min.js"></script>
+    - <script defer data-pjax src="/js/meihua.js"></script> 
 
 # CDN
 # Don't modify the following settings unless you know how they work
