--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -551,23 +551,23 @@ site_verification:
 # Theme color for customize
 # Notice: color value must in double quotes like "#000" or may cause error!
 
-theme_color:
-  enable: true
-  main: 
-  paginator: 
-  button_hover: 
-  text_selection: 
-  link_color: "#a591e0"
-  meta_color: "#858585"
-  hr_color: "#A4D8FA"
-  code_foreground: 
-  code_background: 
-  toc_color: 
-  blockquote_padding_color: 
-  blockquote_background_color: 
-  scrollbar_color: 
-  meta_theme_color_light: "ffffff"
-  meta_theme_color_dark: "#0d0d0d"  
+# theme_color:
+#   enable: true
+#   main: 
+#   paginator: 
+#   button_hover: 
+#   text_selection: 
+#   link_color: "#a591e0"
+#   meta_color: "#858585"
+#   hr_color: "#A4D8FA"
+#   code_foreground: 
+#   code_background: 
+#   toc_color: 
+#   blockquote_padding_color: 
+#   blockquote_background_color: 
+#   scrollbar_color: 
+#   meta_theme_color_light: "ffffff"
+#   meta_theme_color_dark: "#0d0d0d"  
 
 # The top_img settings of home page
 # default: top img - full screen, site info - middle (默認top_img全屏，site_info在中間)
@@ -586,10 +586,6 @@ tag_ui: # 留空或 index
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
 background:
-  default: var(--default-bg)
-  darkmode: var(--darkmode-bg)
-  mobileday: var(--mobileday-bg)
-  mobilenight: var(--mobilenight-bg)
 
 # Footer Background
 footer_bg: false
@@ -953,12 +949,6 @@ css_prefix: true
 inject:
   head:
     - <script defer src="/js/jquery.min.js"></script>
-    - <style id="themeColor"></style> # 主题色
-    - <style id="rightSide"></style> # 侧边栏
-    - <style id="transPercent"></style> # 透明度调节
-    - <style id="blurNum"></style> # 模糊半径调节
-    - <style id="settingStyle"></style> # 模糊效果开关
-    - <span id="fps"></span> # 帧率检测
     - <style id="defineBg"></style> # 自定义背景选项
     #- <link rel="stylesheet" href="/xxx.css">
   bottom:
@@ -971,7 +961,7 @@ inject:
     - <script async src="//at.alicdn.com/t/c/font_3612150_gkavascgf3n.js"></script>
     - <script data-pjax defer src="/js/fixed_card_widget.js"></script>
     - <script defer src="https://jsd.sxiaohe.top/gh/nextapps-de/winbox/dist/winbox.bundle.min.js"></script>
-    - <script defer data-pjax src="/js/meihua.js"></script> 
+    - <script defer data-pjax src="/js/bbtalk.js"></script> 
 
 # CDN
 # Don't modify the following settings unless you know how they work
