--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "echarts": "^5.6.0",
-    "gulp": "^5.0.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^6.3.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-bilibili-bangumi": "^1.10.8",
@@ -50,13 +53,5 @@
     "rgbaster": "^2.1.1",
     "striptags": "^3.2.0",
     "yamljs": "^0.3.0"
-  },
-  "devDependencies": {
-    "gulp-clean-css": "^4.3.0",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-fontmin": "^0.7.4",
-    "gulp-html-minifier-terser": "^7.1.0",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-terser": "^2.1.0"
   }
 }
