--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "echarts": "^5.6.0",
+    "gulp": "^5.0.0",
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^5.0.1",
     "gulp-minify-css": "^1.2.4",
