--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -40,6 +40,7 @@ jobs:
       - name: 安装依赖
         if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         run: |
+          npm install --global gulp-cli
           npm update hexo --save
           npm install --save
           
