--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -759,8 +759,8 @@ aside:
     sort_order: # Don't modify the setting unless you know how it works
   card_archives:
     enable: true
-    type: monthly # yearly or monthly
-    format: MMMM YYYY # eg: YYYY年MM月
+    type: yearly # yearly or monthly
+    format: YYYY # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
     limit: 8 # if set 0 will show all
     sort_order: # Don't modify the setting unless you know how it works
