--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-hash": "^1.0.4",
+    "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.2",
     "hexo-renderer-markdown-it": "^7.1.1",
