--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -960,8 +960,8 @@ inject:
     - <script async src="/js/essay.js"></script>
     - <script async src="//at.alicdn.com/t/c/font_3612150_gkavascgf3n.js"></script>
     - <script data-pjax defer src="/js/fixed_card_widget.js"></script>
-    - <script defer data-pjax src="/js/post-info-bg.js"></script> # 文章页封面生成
-    - <link rel="stylesheet" href="https://jsd.sxiaohe.top/gh/qxchuckle/Post-Summary-AI/chuckle-post-ai.css">
+    - <script defer data-pjax src="/js/post-info-bg.min.js"></script> # 文章页封面生成
+    - <link rel="stylesheet" href="https://jsd.sxiaohe.top/gh/qxchuckle/Post-Summary-AI/chuckle-post-ai.min.css">
     - <script src="https://jsd.sxiaohe.top/gh/qxchuckle/Post-Summary-AI/chuckle-post-ai.js"></script>
     - <script data-pjax defer>new ChucklePostAI({el:'#post>#article-container',key:'05fe901f1c9cb1049496',title_el:'.post-title',rec_method:'web'})</script>
 
