--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-fontmin": "^0.7.4",
     "gulp-html-minifier-terser": "^7.1.0",
     "gulp-htmlclean": "^2.7.22",
+    "gulp-inline-source": "^4.0.0",
     "gulp-notify": "^5.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-terser": "^2.1.0"
