小改动:删除引入的index.css采用hexo生成器引入css文件

--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -54,6 +54,10 @@ jobs:
         run: |
           hexo bangumi -u
 
+      - name: 查看目录有没有生成css
+        run: |
+          ls -l /home/runner/work/hexoSEVER/hexoSEVER/public/css/
+
       - name: 生成静态文件
         run: |
           hexo clean
