小改动:删除引入的index.css采用hexo生成器引入css文件

--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -59,6 +59,7 @@ jobs:
           hexo clean
           hexo generate
           ls -l /home/runner/work/hexoSEVER/hexoSEVER/public/css/
+          node post-build.js
           gulp
 
       - name: 推送到Github仓库
