小改动:删除引入的index.css采用hexo生成器引入css文件

--- a/.github/workflows/hexo-builder.yml
+++ b/.github/workflows/hexo-builder.yml
@@ -61,7 +61,7 @@ jobs:
           ls -l /home/runner/work/hexoSEVER/hexoSEVER/public/css/
           gulp
           ls -l /home/runner/work/hexoSEVER/hexoSEVER/
-          node post-build.js
+          node inline-css.js
 
       - name: 推送到Github仓库
         uses: JamesIves/github-pages-deploy-action@v4
