小改动:优化性能

--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -989,7 +989,7 @@ CDN:
     # translate:
     # local_search:
     # algolia_js:
-    # algolia_search_v4:
+    algolia_search_v4: https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instantsearch.js/2.10.5/instantsearch.min.js
     # instantsearch_v4:
     algolia_js: https://jsd.sxiaohe.top/npm/js-heo@1.0.11/algolia/algolia.js
     pjax: https://lib.baomitu.com/pjax/0.2.8/pjax.min.js
