--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -878,7 +878,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: false
+  enable: true
   exclude:
     # - xxxx
 
