--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -878,7 +878,7 @@ note:
 # It may contain bugs and unstable, give feedback when you find the bugs.
 # https://github.com/MoOx/pjax
 pjax:
-  enable: true
+  enable: false
   exclude:
     # - xxxx
 
@@ -959,7 +959,7 @@ inject:
     - <script async src="/js/waterfall.js"></script> # 瀑布流JS
     - <script async src="/js/essay.js"></script>
     - <script async src="//at.alicdn.com/t/c/font_3612150_gkavascgf3n.js"></script>
-    - <script data-pjax defer src="/js/fixed_card_widget.js"></script>
+    - <script defer src="/js/fixed_card_widget.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
