--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "cheerio": "^1.0.0",
     "echarts": "^5.6.0",
     "gulp": "^4.0.0",
@@ -50,6 +51,7 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-mark": "^4.0.0",
     "moderate": "^1.1.1",
+    "moment": "^2.30.1",
     "rgbaster": "^2.1.1",
     "striptags": "^3.2.0",
     "yamljs": "^0.3.0"
