--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -958,7 +958,7 @@ inject:
     - <script async data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="/js/pace.min.js"></script>
     - <script async src="/js/waterfall.js"></script> # 瀑布流JS
     - <script async src="/js/essay.js"></script>
-    - <script async src="//at.alicdn.com/t/c/font_3612150_gkavascgf3n.js"></script>
+    - <script async src="/https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/font/font_3612150_gkavascgf3n.js"></script>
     - <script defer src="/js/fixed_card_widget.js"></script>
 
 # CDN
@@ -984,10 +984,10 @@ CDN:
 
   option:
     main_css: /css/index.css
-    main: /js/main.js
-    utils: /js/utils.js
+    main: https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/main.js
+    utils: https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/utils.js
     # translate:
-    # local_search:
+    local_search: https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/search/local-search.js
     # algolia_js:
     algolia_search_v4: https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instantsearch.js/2.10.5/instantsearch.min.js
     # instantsearch_v4:
