--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "markdown-it-mark": "^4.0.0",
     "moderate": "^1.1.1",
     "moment": "^2.30.1",
+    "quicklink": "^2.3.0",
     "rgbaster": "^2.1.1",
     "striptags": "^3.2.0",
     "yamljs": "^0.3.0"
