--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -950,15 +950,13 @@ inject:
   head:
     #- <script defer src="/js/lib/zeptojs.min.js"></script>
     #- <link rel="stylesheet" href="/xxx.css">
-    <script async src="https://jsd.sxiaohe.top/npm/quicklink@2.3.0/dist/quicklink.umd.js"></script>
+    - <script async src="https://jsd.sxiaohe.top/npm/quicklink@2.3.0/dist/quicklink.umd.js"></script>
   bottom:
     # - <script src="xxxx"></script>
     - <link rel="stylesheet" href="https://jsd.sxiaohe.top/npm/anzhiyu-theme-static@1.1.9/icon/ali_iconfont_css.css">
     - <link rel="stylesheet" href="/css/font-awesome-animation.min.css" media="only x" onload="this.onload=null;this.media='all'">
     - <script async data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="/js/pace.min.js"></script>
-    - <script async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/waterfall.js"></script> # 瀑布流JS
-    - <script async src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/essay.js"></script>
-    - <script async src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
+    - <script src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
     - <script defer src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/fixed_card_widget.js"></script>
 
 # CDN
