--- a/source/vercel.json
+++ b/source/vercel.json
@@ -5,7 +5,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, max-age=0, must-revalidate"
+            "value": "public, s-maxage=86400, max-age=86400, immutable, must-revalidate"
           }
         ]
       },
@@ -14,10 +14,10 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "public, s-maxage=86400, max-age=86400"
+            "value": "public, s-maxage=86400, max-age=86400, immutable"
           }, {
             "key": "Vercel-CDN-Cache-Control",
-            "value": "max-age=31536000"
+            "value": "public, s-maxage=86400, max-age=86400, immutable"
           }
         ]
       }
