--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.8.2",
     "cheerio": "^1.0.0",
     "echarts": "^5.6.0",
@@ -52,7 +53,6 @@
     "markdown-it-mark": "^4.0.0",
     "moderate": "^1.1.1",
     "moment": "^2.30.1",
-    "quicklink": "^2.3.0",
     "rgbaster": "^2.1.1",
     "striptags": "^3.2.0",
     "yamljs": "^0.3.0"
