--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -950,10 +950,10 @@ inject:
   head:
     #- <script defer src="/js/lib/zeptojs.min.js"></script>
     #- <link rel="stylesheet" href="/xxx.css">
+    - <link rel="stylesheet" href="https://jsd.sxiaohe.top/fonts/anzhiyufonts.css">
+    - <script defer src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
   bottom:
     # - <script src="xxxx"></script>
-    - <link rel="stylesheet" href="https://jsd.sxiaohe.top/npm/anzhiyu-theme-static@1.1.9/icon/ali_iconfont_css.css">
-    - <script defer src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
     - <script defer src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/fixed_card_widget.js"></script>
 
 # CDN
