--- a/source/vercel.json
+++ b/source/vercel.json
@@ -20,7 +20,7 @@
           "value": "public, s-maxage=86400, max-age=86400, immutable"
         }, { 
           "key": "Content-Encoding", 
-          "value": "br, zstd, gzip"
+          "value": "br"
         }
       ]
     }
