--- a/source/vercel.json
+++ b/source/vercel.json
@@ -17,7 +17,7 @@
           "value": "public, s-maxage=86400, max-age=86400, immutable"
         }, {
           "key": "Vercel-CDN-Cache-Control",
-          "value": "public, s-maxage=86400, max-age=86400, immutable"
+          "value": "public, immutable"
         }, { 
           "key": "Content-Encoding", 
           "value": "br"
