--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -950,11 +950,11 @@ inject:
   head:
     #- <script defer src="/js/lib/zeptojs.min.js"></script>
     #- <link rel="stylesheet" href="/xxx.css">
-    - <link rel="stylesheet" href="https://jsd.sxiaohe.top/fonts/anzhiyufonts.css">
+    - <link rel="stylesheet" href="https://static.vercel.sxiaohe.top/fonts/anzhiyu/anzhiyufonts.css">
     - <script defer src="https://jsd.sxiaohe.top/fonts/font_3612150_gkavascgf3n.js"></script>
   bottom:
     # - <script src="xxxx"></script>
-    - <script defer src="https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/fixed_card_widget.js"></script>
+    - <script defer src="/js/fixed_card_widget.js"></script>
 
 # CDN
 # Don't modify the following settings unless you know how they work
