--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "brotli-cli": "^2.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-fontmin": "^0.7.4",
@@ -67,6 +68,7 @@
     "gulp-inline-source": "^4.0.0",
     "gulp-notify": "^5.0.0",
     "gulp-plumber": "^1.2.1",
-    "gulp-terser": "^2.1.0"
+    "gulp-terser": "^2.1.0",
+    "gzip-cli": "^1.2.0"
   }
 }
