--- a/_config.sxiaohe.yml
+++ b/_config.sxiaohe.yml
@@ -981,7 +981,7 @@ CDN:
     main: /js/main.js
     utils: /js/utils.js
     # translate:
-    local_search: https://jsd.sxiaohe.top/gh/661111/661111.GITHUB.IO@master/js/search/local-search.js
+    local_search: /js/search/local-search.js
     # algolia_js:
     algolia_search_v4: https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/instantsearch.js/2.10.5/instantsearch.min.js
     # instantsearch_v4:
