--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,5 +1,5 @@
 - class_name: 零：博主
-  flink_style: volantis
+  flink_style: img-link
   random: true
   link_list:
     - name: 苏晓河
@@ -8,7 +8,7 @@
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
 - class_name: 壹：朋友们
-  flink_style: volantis
+  flink_style: not-img-link
   random: true
   link_list:
     - name: 安小歪
