--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,4 +1,4 @@
-- class_name: 零：博主
+- class_name: 『博主』[1]
   flink_style: img-link
   random: true
   link_list:
@@ -7,15 +7,10 @@
       siteshot: https://www.sxiaohe.top/img/link/苏晓河.avif
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
-- class_name: 壹：朋友们
-  flink_style: not-img-link
+- class_name: 『魔改来源』[2]
+  flink_style: img-link
   random: true
   link_list:
-    - name: 安小歪
-      link: https://blog.anxy.top/
-      avatar: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b737d854192.webp
-      descr: 记住你！自己！
-      siteshot: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b739bef3f9c.png
     - name: 清羽飞扬
       link: https://blog.liushen.fun/
       avatar: https://blog.liushen.fun/info/avatar.ico
@@ -26,6 +21,15 @@
       link: https://www.qcqx.cn
       avatar: https://www.qcqx.cn/head.webp
       descr: 漫天倾尘风中轻笑
+- class_name: 『2025』[2]
+  flink_style: not-img-link
+  random: true
+  link_list:
+    - name: 安小歪
+      link: https://blog.anxy.top/
+      avatar: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b737d854192.webp
+      descr: 记住你！自己！
+      siteshot: https://imgse.koxiuqiu.cc/imgse/u/19/2025/02/20/67b739bef3f9c.png
     - name: 七七小栈
       link: https://blog.zsrooj.site/
       avatar: https://blog.zsrooj.site/img/%E7%BD%91%E7%AB%99%E6%88%AA%E5%9B%BE.png
