--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,4 +1,5 @@
 - class_name: 『博主』[1]
+  class_desc: 本人旗下网站
   flink_style: img-link
   random: true
   link_list:
@@ -8,6 +9,7 @@
       avatar: https://www.sxiaohe.top/img/avatar.avif
       descr: 随风飘起 如同浮云
 - class_name: 『魔改来源』[2]
+  class_desc: 魔改内容以及部分html来源
   flink_style: img-link
   random: true
   link_list:
@@ -22,6 +24,7 @@
       avatar: https://www.qcqx.cn/head.webp
       descr: 漫天倾尘风中轻笑
 - class_name: 『2025』[2]
+  class_desc: 在2025年添加的网站
   flink_style: not-img-link
   random: true
   link_list:
@@ -35,3 +38,8 @@
       avatar: https://blog.zsrooj.site/img/%E7%BD%91%E7%AB%99%E6%88%AA%E5%9B%BE.png
       descr: 一个个人博客，记录生活与技术
       siteshot: https://blog.zsrooj.site/favicon5.ico
+    - name: Leonus
+      link: https://blog.leonus.cn/
+      avatar: https://q1.qlogo.cn/g?b=qq&nk=990320751&s=5
+      descr: 进一寸有进一寸的欢喜。
+      rss: /atom.xml
